micro CMSからブログ情報を取得するサンプルコードを追加

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "tp-microblog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "microcms-js-sdk": "^2.3.3",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
